# lop

./: README.md  smb.conf.txt
ch03/2.libTest2_make_st/appSrc/: Makefile
ch03/2.libTest2_make_st/libStatic/: Makefile
ch03/3.libTest4_make_st/appSrc/: makefile
ch04/1.basic/make/: Makefile
ch04/2.var_cmd/2.var_prj_st/cmake/: CMakeLists.txt
ch04/2.var_cmd/3.vat_trg_add_exe_st/cmake/: CMakeLists.txt
ch04/2.var_cmd/3.vat_trg_add_exe_st/make/: Makefile
ch04/2.var_cmd/4.var_trg_add_lib_st/cmake/libs/: CMakeLists.txt
ch04/2.var_cmd/6.install_exe_st/: CMakeLists.txt
ch04/2.var_cmd/8.build_option_st/cmake/: CMakeLists.txt  test2.c
ch04/2.var_cmd/8.build_option_st/make/: Makefile  test1.c  test3.c
ch05/cmake_app_st/: myrm.sh
ch05/cmake_app_st/00.option_test_st/1.cmake-D/: CMakeLists.txt
ch05/cmake_app_st/00.option_test_st/2.cmake-E/: link_dl.txt  link_st.txt  test4.c
ch05/cmake_app_st/01.app_lib_st/cmake/: CMakeLists.txt
ch05/cmake_app_st/02.app_extlib_link_st/cmake/: CMakeLists.txt
ch05/cmake_app_st/03.add_custom_target_st/cmake/: CMakeLists.txt
ch05/cmake_app_st/04.add_dependencies_st/cmake/: CMakeLists.txt
ch05/cmake_app_st/05.app_lib_install_st/cmake/: CMakeLists.txt
ch05/cmake_app_st/06.cflags_ldflags_st/cmake/: CMakeLists.txt
ch05/cmake_app_st/07.app_lib_custom_st/cmake/: CMakeLists.txt
ch05/cmake_app_st/07.app_lib_custom_st/cmake/libs/: CMakeLists.txt
ch05/cmake_app_st/07.app_lib_custom_st/cmake/libs/libShared/: CMakeLists.txt  sum.c
ch05/cmake_app_st/07.app_lib_custom_st/cmake/libs/libStatic/: CMakeLists.txt
